fix: edit footer items (align center)

--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -77,7 +77,6 @@
   .footer__list {
     flex-direction: column;
     gap: 0;
-    align-items: flex-start;
     padding-right: 40px;
   }
 }
